# orchestrator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TASKLIST.md  config.yaml  docker-compose.yml  docker_compose.yml
.github/workflows/: docker-publish.yml
deployment/: docker_compose.yml  generic.Dockerfile  orchestrator.Dockerfile
dev/: README.md  data.json  run.sh
example/: example.env  run.sh
src/: controllers.rs  main.rs  models.rs  routes.rs  services.rs  utils.rs
src/config/: constants.rs  loader.rs  mod.rs
src/controllers/: client.rs  controllers.rs  health.rs  mod.rs  orchestrator.rs  ping.rs
src/datasource/: db.rs  fs.rs
src/models/: health_dto.rs  job_dao.rs  job_dto.rs  mod.rs  models.rs  payload_dao.rs  payload_dto.rs  ping_dto.rs  queue_dao.rs  queue_dto.rs  status_dto.rs  uploadpayload_dto.rs
src/routes/: router.rs  routes.rs
src/services/: client.rs  jobd.rs  mod.rs  orchestrator.rs  services.rs  tasks.rs
src/utils/: io.rs  utils.rs
