[package]
name = "orchestrator"
version = "0.1.0-alpha1"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full", "test-util"] }
axum = { version = "0.8", features = ["multipart"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0"
tokio-util = { version = "0.7", features = ["io"] }
serde_json = "1"
base64 = "0.22.1"
tempfile = "3.15.0"
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "any",
  "sqlite",
  "macros",
] }
reqwest = { version = "0.12.12", features = ["json"] }
thiserror = "2"
mockall = "0.13"
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1.5", features = ["full"] }
tokio_schedule = "0.3"
