[package]
name = "job-orchestrator"
version = "1.0.1"
edition = "2021"
description = "Asynchronous job orchestrator for managing and routing payloads between services and computing resources with quota tracking"
authors = ["Rodrigo V. Honorato <rvhonorato@protonmail.com>"]
license = "MIT"
repository = "https://github.com/rvhonorato/job-orchestrator"
keywords = [
  "async",
  "job-scheduler",
  "scientific-computing",
  "resource-management",
  "queue",
]
categories = ["asynchronous", "science", "web-programming"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["multipart"] }
bytes = "1.10"
futures = "0.3"
http = "1.2"
hyper = { version = "1.5", features = ["full"] }
mockall = "0.13"
mockito = "1.6"
reqwest = { version = "0.12.12", default-features = false, features = [
  "multipart",
  "stream",
  "json",
  "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-rustls",
  "any",
  "sqlite",
  "macros",
  "migrate",
] }
tempfile = "3.15"
thiserror = "2.0"
tokio = { version = "1.43", features = [
  "full",
  "test-util",
  "macros",
  "rt-multi-thread",
] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
tokio_schedule = "0.3"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = "5.3"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
uuid = { version = "1.12", features = ["v4", "serde"] }
zip = "6"
walkdir = "2"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
